<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RhodesEvents</string>
    <string name="RhodesEvents">RHODES\nEVENTS</string>
    <string name="fresh">Refresh</string>
    <string name="Events">C\nu\nr\nr\ne\nn\nt\n\nE\nv\ne\nn\nt\ns</string>
    <string name="Create">C\nr\ne\na\nt\ne\n\na\nn\n\nE\nv\ne\nn\nt</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Enter</string>
    <string name="title_activity_create_event">Create an Event</string>
    <string name="EventTitle">Name of the Event</string>
    <string name="StartT">Start Time</string>
    <string name="EndT">End Time</string>
    <string name="loca">Location</string>
    <string name="Description">A description of your event</string>
    <string name="rnum">Your R#</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_create">Create</string>

</resources>